# Stalker

./: CMakeLists.txt  main.cpp
LinearAlgebra/: STLKR_ArithmeticTypes.h
LinearAlgebra/ContiguousMemoryStorage/: ContiguousContainerBase.h  Norms.cpp  Norms.h  NumericalVector.h  STLKR_EnumerableAlgebraicOperations.h  STLKR_EnumerableOperationsBase.h  STLKR_NumericalVector.h  STLKR_SIMD_Operations.h  StalkerPerformanceVector.h  StalkerVector.h  VectorOperations.h
LinearAlgebra/ContiguousMemoryStorage/STLKR_Enumerable/: STLKR_EnumerableBase.h  STLKR_EnumerableBaseSIMD.h
LinearAlgebra/ContiguousMemoryStorage/STLKR_Enumerable/STLKR_Array/: STLKR_Array.h  STLKR_Array_SIMD.h
LinearAlgebra/ContiguousMemoryStorage/STLKR_Enumerable/STLKR_SIMD/: STLKR_Config_SIMD.cpp  STLKR_Config_SIMD.h  STLKR_Operations_SIMD.h  STLKR_SIMD.h  STLKR_SIMD_DataOperations.h  STLKR_SIMD_MemoryManager.h
LinearAlgebra/ContiguousMemoryStorage/STLKR_Enumerable/STLKR_Vector/: STLKR_Vector.h  STLKR_Vector_SIMD.h
LinearAlgebra/ContiguousMemoryStorage/STLKR_EnumerableMathematicalOperations/: STLKR_EnumerableAlgebraicOperations.h  STLKR_EnumerableOperationsBase.h  STLKR_Operations.h  STLKR_Operations_SIMD.h  STLKR_SIMD_Operations.h
MachineTopology/: CPUTopologyLinux.cpp  CPUTopologyLinux.h  CPU_Manager.cpp  CPU_Manager.h  CacheLevel.cpp  CacheLevel.h  Core.cpp  Core.h  SharedCache.cpp  SharedCache.h  Thread.cpp  Thread.h
Operations/: AVX_Config.h  AVX_MathTraits.h  AVX_MemoryManagement.h  AVX_MemoryTraits.h  AVX_Operations.h  CPU_Manager.cpp  CPU_Manager.h  JobArguments.h  Prefetch_Operations.h  SIMD_MathTraits.h  SIMD_Operations.h  ThreadJob.h  Thread_Operations.h
Operations/SingleInstructionMultipleData/: AVX_MemoryTraits.h  SIMD_Operations.h  SIMD_Traits.h
STLKR_HighPerformance/STKR_MachineSetup/: STLKR_Machine_CPUEntitiesFactoryLinux.cpp  STLKR_Machine_CPUEntitiesFactoryLinux.h  STLKR_Machine_CPUTopologyLinux.cpp  STLKR_Machine_CPUTopologyLinux.h  STLKR_Machine_CacheLevel.cpp  STLKR_Machine_CacheLevel.h  STLKR_Machine_Core.cpp  STLKR_Machine_Core.h  STLKR_Machine_SharedCache.cpp  STLKR_Machine_SharedCache.h  STLKR_Machine_Thread.cpp  STLKR_Machine_Thread.h
STLKR_HighPerformance/STLKR_MachineSetup/: STLKR_Machine_CPUTopologyLinux.cpp  STLKR_Machine_CPUTopologyLinux.h  STLKR_Machine_CacheLevel.cpp  STLKR_Machine_CacheLevel.h  STLKR_Machine_Core.cpp  STLKR_Machine_Core.h  STLKR_Machine_SharedCache.h  STLKR_Machine_Thread.cpp  STLKR_Machine_Thread.h
STLKR_HighPerformance/STLKR_SIMD/: STLKR_Operations_SIMD.h  STLKR_SIMD_MemoryManager.h
STLKR_HighPerformance/STLKR_Threading/: STLKR_Thread_CacheLineInstance.h  STLKR_Thread_CacheScheduler.h  STLKR_Thread_LinuxProcessorSpecsReader.cpp  STLKR_Thread_LinuxProcessorSpecsReader.h  STLKR_Thread_Operations.h  STLKR_Thread_OperationsLinux.cpp  STLKR_Thread_OperationsLinux.h  STLKR_Threading_JobArguments.h
SpatialDiscretization/: CurvilinearMesh.cpp  CurvilinearMesh.h  MeshFactory.h  MeshSpecs.cpp  MeshSpecs.h  NodalCoordinates.h  Node.h
StalkerVector/: StalkerVector.h  StalkerVector_Iterator.h
StalkerVector/AVX2/: MathTraits.h  MemoryTraits.h  Operations.h  Prefetch.h
Tests/: AVX_PerformanceTest.h  CPUTopologyTest.h  NumericalVectorTest.h  STLKR_TestBase.cpp  STLKR_TestBase.h  StalkerPerformanceVectorTest.h  StalkerVector_ValidityTests.h  TestBase.h  Test_PrimitivesTraits.h
Tests/STLKR_PerformanceTests/: AVX_PerformanceTest.h  STLKR_PerformanceTestBase.cpp  STLKR_PerformanceTestBase.h  StalkerVector_PerformanceTests.h  ThreadingPerformanceTest.h
Tests/STLKR_PerformanceTests/StalkerVector/: StalkerVector_OperationsTests.h  StalkerVector_PerformanceTests.h
Tests/STLKR_PerformanceTests/StalkerVector/SingleThreadPerformance/: SingleThreadOperationsPerformanceTest.h
Tests/STLKR_PerformanceTests/logs/: LogAnalyzer.py
Threading/: ThreadJob.h  ThreadOperations.h
Threading/CPUTopology/: CPU.h  CPU_Manager.h  Cache.h  Core.h  Thread.h
ThreadingOperations/: STLKR_ThreadingOperations.h
Utility/: ConstexprConverter.h  LogAnalyzer.py  Logs.cpp  Logs.h  Readers.h  Timer.cpp  Timer.h
Utility/Units/: STLKR_Units.h
